refactor: 重构文章服务实现类，优化方法复用和权限校验